cilium/curl-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: kube-system
spec:
  containers:
  - name: test-container
    image: curlimages/curl
    command: ['sh', '-c', 'while true; do sleep 3600; done']
    securityContext:
      runAsUser: 0
      capabilities:
        add: ["NET_RAW", "NET_ADMIN"]
  restartPolicy: Always
