cilium/tls-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tls-gateway
  namespace: kube-system
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: "10.66.65.7"
  listeners:
  - name: hubble-ui
    protocol: HTTPS
    port: 443
    hostname: "hubble-ui.pfs.pack"
    allowedRoutes:
      namespaces:
        from: Same
    tls:
      certificateRefs:
      - kind: Secret
        name: ca
  # - name: https-2
  #   protocol: HTTPS
  #   port: 443
  #   hostname: "hipstershop.cilium.rocks"
  #   allowedRoutes:
  #     namespaces:
  #       from: Same
  #   tls:
  #     certificateRefs:
  #     - kind: Secret
  #       name: ca
