cilium/http-routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui-http
  namespace: kube-system
spec:
  parentRefs:
  - name: shared-https-gateway
    namespace: kube-system
    sectionName: http
  hostnames:
  - "hubble-ui.pfs.pack"
  - "hubble.pfs.pack"
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui-https-redirect
  namespace: kube-system
  labels:
    gateway: shared-https-gateway
spec:
  parentRefs:
  - name: shared-https-gateway
    namespace: kube-system
    sectionName: https
  hostnames:
  - "hubble-ui.pfs.pack"
  - "hubble.pfs.pack"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    backendRefs:
    - name: hubble-ui
      port: 80
