cilium/ingress.yaml
---
# kubectl delete svc -n kube-system cilium-ingress-cilium-dedicated-ingress && \
#  kubectl apply -f ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cilium-dedicated-ingress
  namespace: kube-system
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/proxy-connect-timeout: "180"
    # nginx.ingress.kubernetes.io/proxy-read-timeout: "180"
    # nginx.ingress.kubernetes.io/proxy-send-timeout: "180"

    # ingress.cilium.io/rewrite-target: /
    # ingress.cilium.io/proxy-connect-timeout: "180"
    # ingress.cilium.io/proxy-read-timeout: "180"
    # ingress.cilium.io/proxy-send-timeout: "180"
    # ingress.cilium.io/loadbalancer-mode: dedicated
    # ingress.cilium.io/loadbalancer-class: io.cilium/l2-announcer

    # ingress.cilium.io/service-external-traffic-policy: Cluster
    ingress.cilium.io/service-type: LoadBalancer
    lbipam.cilium.io/sharing-key: "1234"
    lbipam.cilium.io/sharing-cross-namespace: "*"
    # ingress.cilium.io/backend-protocol: "HTTPS"  # For secure backend
    # ingress.cilium.io/ssl-passthrough: "true"    # Enable SSL passthrough

    # ingress.cilium.io/secure-node-port: "8443"


    # ingress.cilium.io/host-listener-port: "10443"
    # ingress.cilium.io/enable-cors: "true"
    # ingress.cilium.io/cors-allow-origin: "http://hubble-ui.pfs.pack"
    # ingress.cilium.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    # ingress.cilium.io/cors-allow-headers: "Content-Type, Authorization"
    # ingress.cilium.io/rewrite-target: /  # Rewrite target annotation
#

    # ingress.cilium.io/service-type: ClusterIP
    # ingress.cilium.io/secure-node-port: "8443"
    # # ingress.cilium.io/tls-passthrough: enabled  # Added annotation for TLS Passthrough
    # ingress.cilium.io/force-https: enabled
    # ingress.cilium.io/service-external-traffic-policy: Cluster
    # kubernetes.io/ingress.class: cilium


  #   # for certs through cert-manager
  #   # cert-manager.io/issuer: ca-issue
  #   # type of authentication
  #   cilium.io/auth-type: basic
  #   # prevent the controller from redirecting (308) to HTTPS
  #   cilium.io/ssl-redirect: 'false'
  #   # name of the secret that contains the user/password definitions
  #   cilium.io/auth-secret: basic-auth
  #   # message to display with an appropriate context why the authentication is required
  #   cilium.io/auth-realm: 'Authentication Required '
  #   # custom max body size for file uploading like backing image uploading
  #   cilium.io/proxy-body-size: 10000m
spec:
  ingressClassName: cilium
  rules:
  - host: hubble-ui.pfs.pack
    http:
      paths:
      - path: "/"
      # - path: "/hubble-ui/"
        pathType: Prefix
        backend:
          service:
            name: hubble-ui
            port:
              name: http
              # number: 80

  # - http:
  #     paths:
  #     - pathType: Prefix
  #       # path: /hubble-ui/?(.*)
  #       # path: /?(.*)
  #       path: /
  #       backend:
  #         service:
  #           name: hubble-ui
  #           port:
  #             number: 80
  # - host: hubble-ui.pfs.pack
  #   http:
  #     paths:
  #     - path: /?(.*)
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: hubble-ui
  #           port:
  #             number: 80

  # - http:
  #     paths:
  #     - pathType: Prefix
  #       # path: /hubble-ui/?(.*)
  #       # path: /?(.*)
  #       path: /
  #       backend:
  #         service:
  #           name: hubble-ui
  #           port:
  #             number: 80
  # #     - pathType: Prefix
  # #       path: /longhorn-ui
  # #       backend:
  # #         service:
  # #           name: longhorn-frontend
  # #           port:
  # #             number: 80
  #     - pathType: Prefix
  #       path: /
  #       backend:
  #         service:
  #           name: hubble-ui-service
  #           port:
  #             number: 8081




      # - path: /hubble-ui/?(.*)

  # - host: longhorn-ui.pfs.pack
  #   http:
  #     paths:
  #     - backend:
  #         service:
  #           name: longhorn-frontend
  #           port:
  #             number: 80
  #       path: /
  #       pathType: Prefix
      # - backend:
      #     service:
      #       name: currencyservice
      #       port:
      #         number: 7000
      #   path: /hipstershop.CurrencyService
      #   pathType: Prefix
  # - http:
  #     paths:
  #     # - backend:
  #     #     service:
  #     #       name: details
  #     #       port:
  #     #         number: 9080
  #     #   path: /details
  #     #   pathType: Prefix
  #     - backend:
  #         service:
  #           name: longhorn-frontend
  #           port:
  #             number: 80
  #       path: /longhorn-ui
  #       pathType: Prefix
  # - host: bookinfo.cilium.rocks
  #   http:
  #     paths:
  #     - backend:
  #         service:
  #           name: details
  #           port:
  #             number: 9080
  #       path: /details
  #       pathType: Prefix
  #     - backend:
  #         service:
  #           name: productpage
  #           port:
  #             number: 9080
  #       path: /
  #       pathType: Prefix
  # tls:
  # - hosts:
  #   - hubble-ui.pfs.pack
  #   secretName: hubble-cert
# status:
#   loadBalancer:
#     ingress:
#     - ip: 10.66.65.7
#     - ip: 10.66.65.8
#     - ip: 10.66.65.9
